<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/main_background"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="#000000" >

	<LinearLayout
		android:id="@+id/top"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical" >

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:background="#C0C0C0"
			android:paddingTop="@dimen/padding_medium" >

			<Button
				android:id="@+id/resetbutton"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:onClick="click"
				android:text="@string/reset" />

			<Button
				android:id="@+id/tweetbutton"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:onClick="click"
				android:text="@string/tweet" />
		</LinearLayout>

		<TextView
			android:layout_width="match_parent"
			android:layout_height="@dimen/padding_small"
			android:background="@drawable/gra" />
	</LinearLayout>

	<LinearLayout
		android:id="@+id/linearLayout1"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_alignParentLeft="true"
		android:layout_below="@+id/top"
		android:orientation="horizontal" >

		<ImageView
			android:id="@+id/sanketa"
			android:layout_width="wrap_content"
			android:layout_height="match_parent"
			android:layout_weight="1"
			android:src="@drawable/green_zero" />

		<ImageView
			android:id="@+id/futaketa"
			android:layout_width="wrap_content"
			android:layout_height="match_parent"
			android:layout_weight="1"
			android:src="@drawable/green_zero" />

		<ImageView
			android:id="@+id/hitoketa"
			android:layout_width="wrap_content"
			android:layout_height="match_parent"
			android:layout_weight="1"
			android:src="@drawable/green_zero" />
	</LinearLayout>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_alignParentBottom="true"
		android:layout_alignParentLeft="true"
		android:layout_below="@+id/linearLayout1"
		android:orientation="vertical" >

		<Button
			android:id="@+id/niri_button"
			android:layout_width="fill_parent"
			android:layout_height="match_parent"
			android:background="@drawable/button_frame"
			android:onClick="click"
			android:padding="@dimen/padding_medium"
			android:text="@string/niri"
			android:textSize="100sp"
			tools:context=".Niri" />
	</LinearLayout>

</RelativeLayout>